FIXED: npm security vulnerabilities

--- a/buisness-logic/data-lake/glue-partition-creator/package.json
+++ b/buisness-logic/data-lake/glue-partition-creator/package.json
@@ -6,7 +6,7 @@
     "private": true,
     "dependencies": {
         "aws-sdk": "*",
-        "moment": "^2.29.1"
+        "moment": "*"
     },
     "devDependencies": {
         "aws-sdk": "*"
