--- a/buisness-logic/analytics-processing/package.json
+++ b/buisness-logic/analytics-processing/package.json
@@ -6,7 +6,7 @@
     "main": "index.js",
     "dependencies": {
         "aws-sdk": "*",
-        "moment": "^2.29.1"
+        "moment": "*"
     },
     "devDependencies": {
         "npm-run-all": "*"
