--- a/buisness-logic/api/admin/package.json
+++ b/buisness-logic/api/admin/package.json
@@ -6,13 +6,13 @@
     "private": true,
     "dependencies": {
         "aws-sdk": "*",
-        "aws-serverless-express": "^3.4.0",
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "moment": "^2.29.1",
+        "aws-serverless-express": "*",
+        "body-parser": "*",
+        "cors": "*",
+        "express": "*",
+        "moment": "*",
         "underscore": "*",
-        "uuid": "^8.3.2"
+        "uuid": "*"
     },
     "devDependencies": {
         "aws-sdk": "*",
